--- a/style.css
+++ b/style.css
@@ -3,3 +3,74 @@
   padding: 0;
   margin: 0;
 }
+
+body {
+  width: 100%;
+  height: 100%;
+  display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.top{
+  display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  min-width: 50%;
+  border-radius: 1rem;
+  box-shadow: 0 0 5px red;
+  padding: 1rem 0;
+  margin: 1rem 0;
+}
+
+.mid {
+  display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  min-width: 50%;
+  border-radius: 1rem;
+  box-shadow: 0 0 5px red;
+  padding: 1rem 0;
+  margin: 1rem 0;
+}
+
+.sub-mid {
+  display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  width: 100%;
+  padding: 0 10px;
+}
+
+/* .mid-left {}
+.mid-right{} */
+
+.bot {
+  display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  position: relative;
+  min-width: 50%;
+  border-radius: 1rem;
+  box-shadow: 0 0 5px red;
+  padding: 1rem 0;
+  margin: 1rem 0;
+}
+.scroll{
+  display: flex;
+    flex-direction: row;
+  overflow: scroll;
+  -webkit-overflow-scrolling: none;
+}
+
+.temp-perHour {
+  display: flex;
+    flex-direction: column;
+    align-items: center;
+  position: absolute;
+}
