--- a/style.css
+++ b/style.css
@@ -2,10 +2,11 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-  transition: all 0.2s ease;
+  transition: all 0.15s cubic-bezier(.5, 0, .6, 1.12);
 }
 
 body {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
   width: 100%;
   height: 100%;
   min-height: 100vh;
@@ -13,8 +14,9 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-  background: linear-gradient(135deg, #272c38 0%, #131416 100%);
-  color: hsl(0, 0%, 100%);
+  /* background: linear-gradient(135deg, #272c38 0%, #131416 100%); */
+  background-image: linear-gradient(rgb(24, 24, 27), rgb(0, 0, 0));
+  color: hsl(0, 5%, 78%);
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
@@ -33,30 +35,74 @@ body {
   position: relative;
 }
 
+.icon-top {
+  font-size: 5rem;
+  font-weight: bolder;
+}
+
 .weatherForm {
   display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 100%;
+  width: 100%;
 }
 
 .weatherForm input[type=text]{
-  width: 50%;
+  width: 80%;
   margin-top: 0.5rem;
   padding: 0.5rem;
+  padding-left: 50px;
   border: none;
   border-radius: 0.5rem;
+  background-color: rgba(39, 39, 42, .5);
   box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
 }
 
+.input-icon-wrapper {
+  position: relative;
+  border-color: #f7f7f8;
+  width: 100%;
+}
+
+.input-icon-wrapper i.bi-search {
+  position: absolute;
+  left: 1.1rem;
+  top: 50%;
+  transform: translateY(-50%);
+  color: #b7b8bd;
+  font-size: 1.5rem;
+  pointer-events: none;
+  z-index: 2;
+}
+
+.input-icon-wrapper .city-input {
+  width: 100%;
+  padding-left: 3rem;
+  font-size: 1.25rem;
+  border-radius: 0.7rem;
+  border: 2px solid #727274;
+  background: #191a1d;
+  color: #f7f7f8;
+  height: 3.2rem;
+  font-weight: 500;
+  box-shadow: none;
+}
+
+.input-icon-wrapper .city-input::placeholder {
+  color: #b7b8bd;
+  opacity: 1;
+  font-weight: 400;
+}
+
 button[type=submit]{
-  width: 50%;
+  width: 80%;
   margin-top: 0.5rem;
   padding: 0.5rem;
   border: none;
   border-radius: 0.5rem;
   background: #4a6fa5;
+  border-color: rgb(63 63 70/var(--tw-border-opacity, 1));
   cursor: pointer;
 }
 
@@ -134,7 +180,7 @@ button[type=submit]:active {
   margin-bottom: 1rem;
 }
 
-.conditions {
+.conditions, .wind-speed, .humid, .precipitation, .time {
   color: rgb(191, 194, 197);
 }
 
