--- a/style.css
+++ b/style.css
@@ -53,26 +53,27 @@ body {
   margin-top: 0.5rem;
   padding: 0.5rem;
   padding-left: 50px;
-  border: none;
   border-radius: 0.5rem;
   background-color: rgba(39, 39, 42, .5);
-  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
+  box-shadow: inset 0 1px 3px rgba(30, 29, 29, 0.1);
 }
 
 .input-icon-wrapper {
   position: relative;
   border-color: #f7f7f8;
   width: 100%;
+  display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .input-icon-wrapper i.bi-search {
   position: absolute;
-  left: 1.1rem;
+  left: 13%;
   top: 50%;
   transform: translateY(-50%);
   color: #b7b8bd;
   font-size: 1.5rem;
-  pointer-events: none;
   z-index: 2;
 }
 
